# SparseH5DataAccessPlugin

./: .gitignore  CMakeLists.txt  LICENSE  PluginInfo.json  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
src/: AddRemoveButtonAction.cpp  AddRemoveButtonAction.h  H5Utils.cpp  H5Utils.h  SettingsAction.cpp  SettingsAction.h  SparseH5AccessPlugin.cpp  SparseH5AccessPlugin.h
test/: CMakeLists.txt  create_reference_data.py  requirements.txt  test_main.cpp  test_utils.h
test/data/: csc.h5  csr.h5
